# mcp-anywhere

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.native  LICENSE  README.md  RESUMO_TRANSPORT_MODES.md  TESTE_SSE_RESUMO.md  TESTING_PAGE_ACCEPT_HEADER_FIX.md  TESTING_PAGE_DEBUG.md  TESTING_PAGE_FIX.md  TESTING_PAGE_IMPLEMENTATION.md  TESTING_PAGE_PATH_FIX.md  TESTING_PAGE_SESSION_ID_FIX.md  TESTING_PAGE_SSE_PARSING_FIX.md  TRANSPORT_MODES.md  applyandpush.sh  applyandpush.sh.bak  check_db_tools.py  check_runtime_tools.py  check_tool_schema.py  default_servers.json  docker-compose.native.yml  docker-compose.yml  entrypoint.native.sh  entrypoint.sh  env.example  fly.toml  inspector_config.json  inspector_config.json.bak  mkdocs.yml  pyproject.toml  requirements.txt  test_async_tool_discovery.py  test_context7_aimsun.py  test_mcp_client.py  test_mcp_complete.py  test_mcp_direct.py  (+5 more)
.github/workflows/: deploy-docs.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
docs/: CNAME  README.md  SSE_SUPPORT.md  deployment.md  getting-started.md  index.md  requirements.txt  testing-page-guide.md
docs/assets/stylesheets/: extra.css
old_chats/: cursor_codebase_changes_and_implementat.md
src/mcp_anywhere/: __init__.py  __main__.py  base.py  claude_analyzer.py  config.py  crypto_utils.py  database.py  database_utils.py  logging_config.py  server_guidance.py  settings_store.py  tool_usage.py
src/mcp_anywhere/auth/: __init__.py  api_tokens.py  csrf.py  initialization.py  middleware.py  models.py  provider.py  routes.py  token_verifier.py
src/mcp_anywhere/container/: manager.py
src/mcp_anywhere/core/: __init__.py  base_middleware.py  mcp_manager.py  middleware.py  tool_usage_middleware.py
src/mcp_anywhere/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openrouter_provider.py
src/mcp_anywhere/security/: __init__.py  file_manager.py
src/mcp_anywhere/transport/: __init__.py  http_server.py  stdio_gateway.py  stdio_server.py
src/mcp_anywhere/web/: api_token_routes.py  app.py  forms.py  (+8 more)
src/mcp_router/: __init__.py  __main__.py  app.py  asgi.py  async_utils.py  auth.py  claude_analyzer.py  config.py  container_manager.py  forms.py  logging_config.py  mcp_oauth.py  middleware.py  models.py  server.py  server_manager.py
tests/: __init__.py  conftest.py  test_admin_password_sync.py  test_admin_reset_password_cli.py  test_api_tokens.py  test_app.py  test_auth.py  test_auth_migration.py  test_auth_models.py  test_change_password.py  test_claude_analyzer.py  test_claude_analyzer_runtime_detection.py  test_config.py  test_config_routes.py  test_container_manager.py  test_container_manager_start_command.py  test_container_startup_errors.py  test_database_utils.py  test_docker_config.py  test_dynamic_auth.py  test_dynamic_integration.py  test_dynamic_server_manager.py  test_e2e_server_mounting.py  test_env_vars_extraction.py  test_favicon_route.py  test_forms.py  test_htmx_redirect_headers.py  test_http_mode.py  test_http_transport.py  test_jwt_middleware.py  test_main.py  test_main_cli.py  test_mcp_trailing_slash.py  test_middleware.py  test_models.py  test_oauth_consent_integration.py  test_oauth_integration.py  test_security_settings.py  test_server.py  test_server_analysis_form.py  (+14 more)
(+40 files in other folders)
